# shinobu

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/shinobu-core-changes/: SKILL.md
.claude/skills/shinobu-plugin-development/: SKILL.md
configs/: test.toml
crates/snb_cli/: Cargo.toml
crates/snb_cli/src/: main.rs
crates/snb_cli/tests/unit/: main_tests.rs
crates/snb_core/: Cargo.toml  build.rs
crates/snb_core/src/: adapter.rs  bot.rs  command.rs  context.rs  database.rs  error.rs  event.rs  hook.rs  lib.rs  log_bridge.rs  logger.rs  message_handler.rs  plugin.rs  registry.rs  session.rs
crates/snb_core/tests/unit/: adapter_tests.rs  command_tests.rs  database_tests.rs  error_tests.rs  event_tests.rs
crates/snb_macros/: Cargo.toml
crates/snb_macros/src/: adapter.rs  common.rs  database.rs  lib.rs  plugin.rs
crates/snb_runtime/: Cargo.toml
crates/snb_runtime/src/: bot.rs  lib.rs  logger.rs  plugin_manager.rs  session.rs
crates/snb_runtime/tests/: command_meta_tests.rs  test_plugin.rs
crates/snb_runtime/tests/unit/: logger_tests.rs  session_tests.rs
crates/snb_status/src/: lib.rs
crates/snb_status/tests/unit/: lib_tests.rs
crates/xtask/src/: main.rs
crates/xtask/tests/unit/: main_tests.rs
plugins/snb_adapter_stdin/: Cargo.toml
plugins/snb_adapter_stdin/src/: lib.rs
plugins/snb_adapter_stdin/tests/unit/: lib_tests.rs
plugins/snb_database_sqlite/: Cargo.toml
plugins/snb_database_sqlite/src/: lib.rs
plugins/snb_database_sqlite/tests/unit/: lib_tests.rs
plugins/snb_plugin_example/: Cargo.toml
plugins/snb_plugin_example/src/: lib.rs
plugins/snb_plugin_example/tests/unit/: lib_tests.rs
