[workspace]
members = [
    "crates/*",
    "plugins/snb_adapter_stdin",
    "plugins/snb_database_sqlite",
    "plugins/snb_plugin_example",
]
default-members = [
    "crates/snb_cli",
    "crates/snb_core",
    "crates/snb_macros",
    "crates/snb_runtime",
    "crates/snb_status",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
authors = ["kmiit <kmiit@foxmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/kmiit/shinobu"
repository = "https://github.com/kmiit/shinobu"
edition = "2024"
rust-version = "1.96.0"

[workspace.metadata.snb]
abi_version = "0.3.0"

[workspace.dependencies]
snb_core = { path = "crates/snb_core" }
snb_macros = { path = "crates/snb_macros" }
snb_runtime = { path = "crates/snb_runtime" }
snb_status = { path = "crates/snb_status" }

anyhow = "1"
log = "0"
toml = "1"
