[package]
name = "snb_cli"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "shinobu"
path = "src/main.rs"

[dependencies]
snb_runtime = { workspace = true }
snb_core = { workspace = true }
log = { workspace = true }
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
toml = { workspace = true }
