[package]
name = "snb_core"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tokio = { version = "1", features = ["rt"] }
inventory = "0"

[build-dependencies]
toml = { workspace = true }
