[package]
name = "snb_runtime"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
libloading = "0"
snb_core = { workspace = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
tempfile = "3"
toml = { workspace = true }
