[package]
name = "snb_adapter_stdin"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { workspace = true }
snb_core = { workspace = true }
snb_macros = { workspace = true }
