[package]
name = "snb_database_sqlite"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
rusqlite = { version = "0.39", features = ["bundled"] }
snb_core = { workspace = true }
snb_macros = { workspace = true }

