[package]
name = "snb_plugin_example"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
snb_core = { workspace = true }
snb_macros = { workspace = true }
tokio = { version = "1", features = ["time", "rt"] }
